# Devices

./: README.md
AsthmaSync/: README.md
AsthmaSync/docs/: API.md  ARCHITECTURE.md  PIN_MAP.md  PROTOCOL.md
AsthmaSync/scripts/: calibrate_sensors.py  collect_actuation.py  deploy.sh  flash_all.sh
BrewSync/: README.md
BrewSync/docs/: api.md  architecture.md  protocol.md
BrewSync/schematic/: BrewSync_Brew_Scanner.kicad_sch  BrewSync_Cellar_Monitor.kicad_sch  BrewSync_Fermenter_Node.kicad_sch  BrewSync_Hub.kicad_sch
BrewSync/scripts/: calibrate.sh  deploy.sh  flash.sh  pair-node.sh
CompostSync/: README.md
CompostSync/docs/: api-spec.md  architecture.md  assembly-guide.md  protocol-spec.md
CompostSync/firmware/bin-node/: CMakeLists.txt  ble_bridge.c  lora_node.c  main.c  power.c  sensors.c  servo.c
CompostSync/firmware/hub/: CMakeLists.txt  ble_service.c  display.c  edge_ml.c  lora_mesh.c  main.c  sd_logger.c  wifi_mqtt.c
CompostSync/firmware/soil-probe/: CMakeLists.txt  main.c
CompostSync/firmware/weather-station/: CMakeLists.txt  main.c  power.c
CompostSync/scripts/: calibrate_loadcell.py  calibrate_moisture.py  deploy_backend.sh  flash_all.sh  train_models.sh
HiveSync/: README.md
HiveSync/docs/: api.md  architecture.md  protocol.md
HiveSync/scripts/: calibrate_entrance.py  calibrate_temp.py  calibrate_weight.py  deploy_gateway.sh
MigraineSync/: README.md
MigraineSync/docs/: API.md  ARCHITECTURE.md  PIN_MAP.md  PROTOCOL.md
MigraineSync/scripts/: calibrate_sensors.py  collect_training_data.py  deploy.sh  export_edge_models.sh  flash_all.sh  train_all.sh
PestSync/: README.md
PestSync/docs/: api-spec.md  architecture.md  assembly-guide.md  protocol-spec.md
PestSync/firmware/deterrent-node/: CMakeLists.txt  diffuser.c  lora_node.c  main.c  power.c  strobe.c  ultrasonic.c
PestSync/firmware/hub/: CMakeLists.txt  ble_service.c  display.c  edge_ml.c  lora_mesh.c  main.c  sd_logger.c  wifi_mqtt.c
PestSync/firmware/pest-sentinel/: CMakeLists.txt  camera.c  lora_node.c  main.c  pest_cnn.c  pir.c  power.c  thermal.c
PestSync/firmware/smart-trap/: CMakeLists.txt  lora_node.c  main.c  power.c  trap_sensors.c
PestSync/scripts/: calibrate_camera.py  calibrate_trap.py  deploy_backend.sh  flash_all.sh  train_models.sh
PoolSync/: README.md
PoolSync/docs/: api.md  architecture.md  protocol.md
PoolSync/scripts/: calibrate_ph.py  deploy.sh  simulate_sensors.py
breath-home/: README.md
breath-home/docs/: api.md  architecture.md  protocol.md
breath-home/schematic/: hub-node.sch  hvac-controller.sch  room-sensor.sch  wearable-tag.sch
breath-home/scripts/: calibrate.sh  deploy.sh  ota-update.sh  setup-hub.sh
calm-grid/: README.md
calm-grid/docs/: api.md  architecture.md  protocol.md
calm-grid/firmware/hub-node/: CMakeLists.txt  dashboard_render.c  hub_main.c  intervention.c  stress_model.c
calm-grid/firmware/light-node/: CMakeLists.txt  circadian.c  light_main.c
calm-grid/firmware/room-sentinel/: CMakeLists.txt  ambient.c  privacy.c  prosody.c  sentinel_main.c
calm-grid/firmware/wrist-band/: CMakeLists.txt  activity_classify.c  eda_gsr.c  ppg_hrv.c  stress_detect.c  wrist_main.c
calm-grid/scripts/: calibrate_wrist.py  deploy.py
cradle-keep/: README.md
cradle-keep/docs/: api.md  architecture.md  assembly_guide.md  protocol.md
cradle-keep/scripts/: calibrate_crib.py  deploy.py
ergo-flow/: README.md
ergo-flow/docs/: api.md  architecture.md  protocol.md
ergo-flow/schematic/: chair-pad.sch  desk-controller.sch  hub-node.sch  wearable-tag.sch
ergo-flow/scripts/: build.sh  calibrate.sh  deploy.sh  flash.sh
flow-guard/: README.md
flow-guard/docs/: api.md  architecture.md  assembly_guide.md  protocol.md
flow-guard/scripts/: build_firmware.sh  calibrate.py  deploy.sh
fresh-keep/: README.md
fresh-keep/docs/: api.md  architecture.md  assembly_guide.md  protocol.md
fresh-keep/scripts/: calibrate_weights.py  deploy.py  download_barcode_db.py
green-pulse/: README.md
green-pulse/docs/: api.md  architecture.md  protocol.md
green-pulse/firmware/hub-node/: CMakeLists.txt  hub_main.c
green-pulse/firmware/leaf-scanner/: CMakeLists.txt  scanner_main.c
green-pulse/firmware/plant-tag/: CMakeLists.txt  plant_main.c
green-pulse/firmware/water-valve/: CMakeLists.txt  valve_main.c
green-pulse/scripts/: calibrate_sensors.py  deploy.py
med-sync/: README.md
med-sync/docs/: api.md  architecture.md  assembly_guide.md  protocol.md
med-sync/scripts/: calibrate.py  deploy.py  provision_mesh.py
oral-sync/: README.md
oral-sync/docs/: api.md  architecture.md  protocol.md
oral-sync/schematic/: OralSync_Hub.kicad_sch  (+3 more)
paw-sync/: README.md
paw-sync/docs/: api.md  (+2 more)
paw-sync/firmware/behavior-camera/: CMakeLists.txt  behavior_model.c  camera_main.c  privacy.c  vocalization.c
paw-sync/firmware/collar-tag/: CMakeLists.txt  activity_cnn.c  collar_main.c  gait_analysis.c  ppg_hr.c  scratch_detect.c
paw-sync/firmware/feeder-node/: CMakeLists.txt  feeder_main.c  load_cell.c  rfid_pet.c  schedule.c
paw-sync/firmware/hub-node/: CMakeLists.txt  enrichment.c  hub_main.c  vitals_render.c  wellness_model.c
pest-sentinel/: README.md
porch-guard/: README.md
power-pulse/: README.md
skin-sync/: README.md
skin-sync/firmware/hub-node/: CMakeLists.txt  hub_main.c
sleep-sync/: README.md
sole-guard/: README.md
sole-guard/firmware/ankle-tag/: CMakeLists.txt  ankle_main.c  bioimpedance.c
sole-guard/firmware/hub-node/: CMakeLists.txt  heatmap_render.c  hub_main.c  ulcerrisk_model.c
sole-guard/firmware/insole-node/: CMakeLists.txt  gait_phase.c  insole_main.c  pressure_matrix.c  thermistor_array.c
sound-nest/: README.md
thermo-grid/: README.md
trail-sync/: README.md
trail-sync/firmware/: CMakeLists.txt
trail-sync/firmware/common/: trail_protocol.c  trail_protocol.h
trail-sync/firmware/hub-node/: hub_main.c
trail-sync/firmware/shoe-pod/: shoe_pod_main.c
trail-sync/firmware/trail-beacon/: trail_beacon_main.c
trail-sync/firmware/wrist-unit/: wrist_main.c
urban-harvest/: README.md
wash-wise/: README.md
(+903 files in other folders)
